services/k8s/base/kong/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: kong-system
    labels:
        name: kong-system
